# pytorch-eventprop

./: .gitignore  README.md  args.yaml  eventprop_main.py  initalization_scheme.py  main.py  model_comparison.ipynb  models.py  new_models.py  pyproject.toml  snntorch_main.py  training.py
eventprop/: config.py  data.py  initalization.py  meta.py  models.py  training.py
og/: models.py
pytorch_eventprop/: args.yaml  data.py  initalization.py  models.py  training.py
scripts/: eventprop_main.py  gradient_check_for_spinnaker.ipynb  main_maml.py  main_wandb.py  main_wandb_onchip.py  model_comparison.ipynb  model_init.ipynb  pytorch_eventprop.code-workspace  wandb_agent.sh
scripts/classic-training/: eventprop_main.py  main_wandb copy.py  main_wandb.py  main_wandb_copy.py  main_wandb_onchip.py  main_wandb_online.py  wandb_results.ipynb
scripts/meta-learning/: MAML.ipynb  main_imaml.py  main_maml.py  main_maml_old.py  main_reptile.py  maml_loss  model  reptile_model
scripts/notebooks/: MAML.ipynb  model_comparison.ipynb  simple_training_check.ipynb  wandb_results.ipynb
scripts/spinnaker-debugging/: gradient_check_for_spinnaker.ipynb
scripts/sweeps/: wandb_agent_ev.sh  wandb_agent_su.sh
