[project]

name = "pytorch_eventprop"

version = "0.1.0"

description = "Create a trains model with snntorch (surrogate) and eventprop (exact) gradients backpropagation."

readme = "README.md"

requires-python = ">=3.7"

license = {file = "LICENSE"}

keywords = ["snntorch", "eventprop", "pytorch"]

authors = [
{name = "Pedro Savarese", email =  "savarese@ttic.edu"},
{name = "Gabriel Béna", email =  "gabriel.bena@spinncloud.com"},
]

maintainers = [
{name = "Gabriel Béna", email =  "gabriel.bena@spinncloud.com"},
]

dependencies = [ 
    "numpy",
    "matplotlib",
    "seaborn",
    "wandb", 
    "snntorch",
    "tqdm",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytorch_eventprop"]